Add description section

--- a/index.html
+++ b/index.html
@@ -130,7 +130,41 @@
                         </div>
                     </div>
 
+                    <div class="detail">
+                        <div class="description">
+                            <p class="paragraph">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas congue quisque egestas diam. Integer feugiat scelerisque varius morbi enim nunc faucibus a.
+                            </p>
+                            <p class="paragraph">
+                                Aliquam vestibulum morbi blandit cursus risus at ultrices mi tempus. Cursus metus aliquam eleifend mi in. Egestas egestas fringilla phasellus faucibus scelerisque eleifend. In metus vulputate eu scelerisque felis imperdiet proin.
+                            </p>
+                            <ul class="list">
+                                <li class="list__item">Close to the beach</li>
+                                <li class="list__item">Breakfast included</li>
+                                <li class="list__item">Free airport shuttle</li>
+                                <li class="list__item">Free wifi in all rooms</li>
+                                <li class="list__item">Air conditioning and heating</li>
+                                <li class="list__item">Pets allowed</li>
+                                <li class="list__item">We speak all languages</li>
+                                <li class="list__item">Perfect for families</li>
+                            </ul>
+                            <div class="recommend">
+                                <p class="recommend__count">
+                                    Lucy and 3 other friends recommend this hotel
+                                </p>
+                                <div class="recommend__friends">
+                                    <img src="img/user-3.jpg" alt="User photo 1" class="recommend__photo">
+                                    <img src="img/user-4.jpg" alt="User photo 2" class="recommend__photo">
+                                    <img src="img/user-5.jpg" alt="User photo 3" class="recommend__photo">
+                                    <img src="img/user-6.jpg" alt="User photo 4" class="recommend__photo">
+                                </div>
+                            </div>
+                        </div>
 
+                        <div class="user-reviews">
+                            User reviews
+                        </div>
+                    </div>
 
                 </main>
             </div>
