--- a/index.html
+++ b/index.html
@@ -162,7 +162,34 @@
                         </div>
 
                         <div class="user-reviews">
-                            User reviews
+                            <figure class="review">
+                                <blockqoute class="review__text">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam consequatur cupiditate earum eveniet exercitationem in, labore magnam maiores molestias nemo, nisi nulla numquam officia omnis repellat soluta tempora voluptate voluptatem.
+                                </blockqoute>
+                                <figcaption class="review__user">
+                                    <img src="img/user-1.jpg" alt="User 1" class="review__photo">
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">Nick Smith</p>
+                                        <p class="review__user-date">Feb 23rd, 2022</p>
+                                    </div>
+                                    <div class="review__rating">7.8</div>
+                                </figcaption>
+                            </figure>
+                            <figure class="review">
+                                <blockqoute class="review__text">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam consequatur cupiditate earum eveniet exercitationem in.
+                                </blockqoute>
+                                <figcaption class="review__user">
+                                    <img src="img/user-2.jpg" alt="User 2" class="review__photo">
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">Mary Thomas</p>
+                                        <p class="review__user-date">May 5th, 2022</p>
+                                    </div>
+                                    <div class="review__rating">8.9</div>
+                                </figcaption>
+                            </figure>
+
+                            <button class="btn-inline">Show all <span>&rarr;</span></button>
                         </div>
                     </div>
 
